# plugin-ipc

./: .clang-tidy  .codacy.yml  .gitignore  AGENTS.md  CMakeLists.txt  COVERAGE-EXCLUSIONS.md  Makefile  README.md  TODO-coverity-findings.md  TODO-fit-for-purpose-validation.md  TODO-hardening.md  TODO-integrator-skill.md  TODO-netdata-master-backport.md  TODO-netdata-plugin-ipc-integration.md  TODO-pending-from-rewrite.md  TODO-phase11.md  TODO-phase13.md  TODO-phase14.md  TODO-plugin-ipc.history.md  TODO-plugin-ipc.md  TODO-production-readiness-review.md  TODO-remove-endianness.md  TODO-rewrite.md  TODO-shm-redesign.md  TODO-spec-compliance.md  TODO-specs.md  TODO-unified-l2-l3-api.md  WINDOWS-COVERAGE.md  benchmark-windows.md  benchmarks-posix.csv  benchmarks-posix.floor-retries.csv  benchmarks-posix.md  benchmarks-posix.notes.md  benchmarks-windows.csv  benchmarks-windows.md  benchmarks-windows.notes.md  diff-netdata-vendor.sh  vendor-to-netdata.sh
.agents/skills/project-netdata-vendoring/: SKILL.md
.agents/sow/current/: SOW-0014-20260603-maintainability-hotspots.md  SOW-0015-20260605-codacy-scope-and-maintainability.md  SOW-0021-20260613-netipc-at-scale.md  SOW-0027-20260629-netdata-vendor-memory-safety-update.md
.agents/sow/done/: SOW-0001-20260501-bootstrap-sow-basics.md  SOW-0002-20260501-root-todo-classification.md  SOW-0003-20260524-backport-netdata-go-vendor-cleanup.md  SOW-0004-20260525-cgroups-apps-lookup-methods.md  SOW-0005-20260526-lookup-batch-one-benchmarks.md  SOW-0007-20260528-transparent-lookup-batch-splitting.md  SOW-0008-20260602-sync-topology-containers-vendor-drift.md  SOW-0009-20260602-github-security-scanning.md  SOW-0010-20260602-static-analysis-finding-cleanup.md  SOW-0013-20260603-codacy-metrics-investigation.md  SOW-0014-20260603-maintainability-hotspots.md  SOW-0016-20260610-client-call-timeout-and-abort.md  SOW-0017-20260610-rust-test-rundir-umask.md  SOW-0022-20260615-benchmark-language-deltas.md  SOW-0023-20260615-benchmark-hot-path-fixes.md  SOW-0024-20260615-netdata-pr-scanner-ci-cleanup.md  SOW-0025-20260627-cgroups-cache-concurrency-contract.md  SOW-0026-20260628-netipc-memory-safety-scout-findings.md  SOW-0028-20260701-netdata-vendor-preflight-policy.md  SOW-0029-20260701-ci-scanner-readiness.md
.agents/sow/pending/: SOW-0002-20260501-root-todo-classification.md  SOW-0010-20260602-static-analysis-finding-cleanup.md  SOW-0027-20260629-netdata-vendor-memory-safety-update.md
.agents/sow/todo-history/: TODO-coverity-findings.md  (+8 more)
.codacy/: codacy.config.json
.github/: codeql.yml  dependabot.yml
.github/workflows/: codacy-analysis.yml  codacy-coverage.yml  codeql.yml  dependency-review.yml  runtime-safety.yml  static-analysis.yml  supply-chain-security.yml
bench/drivers/rust/: Cargo.toml  netipc_live_uds_rs.rs  netipc_live_win_rs.rs
bench/drivers/rust/src/: bench_windows.rs  main.rs
docs/: README.md  code-organization.md  codec-apps-lookup.md  codec-cgroups-lookup.md  codec-cgroups-snapshot.md  codec.md  getting-started.md  level1-posix-shm.md  level1-posix-uds.md  level1-transport.md  level1-windows-np.md  level1-windows-shm.md  level1-wire-envelope.md  level2-typed-api.md  level3-snapshot-api.md  netipc-integrator-skill.md
src/crates/: Cargo.toml
src/crates/netipc/: Cargo.toml
src/crates/netipc/src/: lib.rs  protocol.rs
src/crates/netipc/src/protocol/: cgroups.rs  increment.rs  lookup.rs  mod.rs  string_reverse.rs
src/crates/netipc/src/protocol/lookup/: apps_lookup.rs  cgroups_lookup.rs  common.rs
src/crates/netipc/src/service/: apps_lookup.rs  cgroups.rs  cgroups_lookup.rs  cgroups_snapshot.rs  cgroups_unix_tests.rs  cgroups_windows_tests.rs  mod.rs  raw.rs  raw_unix_tests.rs  raw_windows_tests.rs
src/crates/netipc/src/service/raw/: apps_lookup.rs  cgroups_cache.rs  cgroups_lookup.rs  client.rs  dispatch.rs  server.rs  server_windows.rs
src/crates/netipc/src/transport/: mod.rs  posix.rs  posix_tests.rs  shm.rs  shm_tests.rs  win_shm.rs  windows.rs
src/go/: go.mod
src/libnetdata/netipc/: CMakeLists.txt
src/libnetdata/netipc/include/netipc/: netipc_cgroups_snapshot.h  netipc_named_pipe.h  netipc_protocol.h  netipc_schema.h  netipc_service.h  netipc_shm.h  netipc_shm_hybrid.h  netipc_uds.h  netipc_uds_seqpacket.h  netipc_win_shm.h
src/libnetdata/netipc/src/protocol/: netipc_protocol.c  netipc_protocol_apps_lookup.c  netipc_protocol_cgroups_lookup.c  netipc_protocol_cgroups_snapshot.c  netipc_schema.c
src/libnetdata/netipc/src/service/: netipc_cgroups_snapshot.c  netipc_service.c  netipc_service_apps_lookup.c  netipc_service_cgroups_lookup.c  netipc_service_common.c  netipc_service_posix_server.c  netipc_service_win.c  netipc_service_win_client.c
src/libnetdata/netipc/src/transport/posix/: netipc_shm.c  netipc_shm_hybrid.c  netipc_uds.c  netipc_uds_inflight.c  netipc_uds_receive.c  netipc_uds_send.c  netipc_uds_seqpacket.c
src/libnetdata/netipc/src/transport/windows/: README.md  netipc_named_pipe.c  netipc_shm_hybrid_win.c  netipc_shm_hybrid_win.h  netipc_win_shm.c
tests/: compare-windows-bench-toolchains.sh  fuzz_protocol.c  generate-benchmarks-posix.sh  generate-benchmarks-windows.sh  generate-codacy-coverage.sh  interop_codec.sh  run-coverage-c-windows.sh  run-coverage-c.sh  run-coverage-go-windows.sh  run-coverage-go.sh  run-coverage-rust-windows.sh  run-coverage-rust.sh  run-extended-fuzz.sh  run-go-race.sh  run-interop.sh  run-live-cgroups-baseline.sh  run-live-cgroups-bench.sh  run-live-cgroups-shm-bench.sh  run-live-cgroups-shm.sh  run-live-cgroups-win-bench.sh  run-live-cgroups-win.sh  run-live-interop.sh  run-live-npipe-smoke.sh  run-live-shm-bench.sh  run-live-uds-bench.sh  run-live-uds-interop.sh  run-live-win-bench.sh  run-live-win-profile-bench.sh  run-low-priority.sh  run-negotiated-profile-bench.sh  run-posix-bench.sh  run-sanitizer-asan.sh  run-sanitizer-tsan.sh  run-uds-managed.sh  run-uds-multi-client.sh  run-uds-negotiation-negative.sh  run-uds-pipeline.sh  run-uds-seqpacket.sh  run-valgrind.sh  run-verifier-windows.sh  (+23 more)
tests/fixtures/rust/: Cargo.toml  build.rs
(+208 files in other folders)
